k8s/petclinic_new.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  labels:
    run: petclinic
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    run: petclinic
    version: v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  selector:
    matchLabels:
      run: petclinic
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate  
  template:
    metadata:
      labels:
        run: petclinic
        version: v2
    spec:
      securityContext:
        runAsUser: 1000
      terminationGracePeriodSeconds: 30
      containers:
      - name: petclinic
        image: bajutae/petclinic:1.1
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/liveness
            port: 8080
          initialDelaySeconds: 130
          periodSeconds: 10
          failureThreshold: 3
