k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:               # 각 path는 백엔드와 연결됨
      - path: /
        backend:           # 연결될 서비스이름과 port
          serviceName: petclinic
          servicePort: 8080
